fixed spacing

--- a/src/Projects/Project/Utsearch/Utsearch.scss
+++ b/src/Projects/Project/Utsearch/Utsearch.scss
@@ -4,6 +4,7 @@ $primary-main-purple: #3B1CDF;
 .utsearch-btns {
   display: flex;
   flex-direction: row;
+  margin-bottom: 1em;
 
   .utsearch-btn {
     margin-right: 0.5rem;
